--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="icon" type="image/icon" href="../favicon.ico">
-    <title>BBSCoin Block Explorer</title>
+    <title>Dogemone Block Explorer</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
@@ -450,7 +450,7 @@
                         <div style="text-align: right">Based on&nbsp;</div>
                         <div style="flex: 1">
                             <a target="_blank" href="https://github.com/clintar/Boolberry-Blockchain-Explorer">
-                                <i class="fa fa-github"></i> Boolberry Blockchain Explorer</a> | 
+                                <i class="fa fa-github"></i> Boolberry Blockchain Explorer</a> |
                             <a target="_blank" href="https://github.com/Karbovanets/Karbowanec-Blockchain-Explorer">
                                 <i class="fa fa-github"></i> Karbowanec Blockchain Explorer</a>
                             <br />
