--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand " href="/">
-                    <span style="font-size: 25px; font-weight: bold">Explorer</span>.bbscoin.xyz</a>
+                    <span style="font-size: 25px; font-weight: bold">Explorer</span>.dogemone.online</a>
                 <div id="stats_updated">
                     <i class="fa fa-bolt"></i>
                 </div>
@@ -227,7 +227,7 @@
                     </li>
 
                     <li>
-                        <a class="hot_link" href="http://pool.bbscoin.xyz/#network">
+                        <a class="hot_link" href="http://pool.dogemone.online/#network">
                             <i class="fa fa-gavel" aria-hidden="true"></i> Pools
                         </a>
                     </li>
@@ -442,15 +442,13 @@
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-6" style="font-size: 11px;">
                     Powered by&nbsp;
-                    <a target="_blank" href="https://github.com/bbscoin/bbscoin-blockchain-explorer">
-                        <i class="fa fa-github"></i> BBSCoin Blockchain Explorer
+                    <a target="_blank" href="https://github.com/HashHound/explorer-dogemone-online.github.io">
+                        <i class="fa fa-github"></i> dogemone Blockchain Explorer
                     </a> v1.0
 
                     <div style="display: flex; flex-direction: row">
                         <div style="text-align: right">Based on&nbsp;</div>
                         <div style="flex: 1">
-                            <a target="_blank" href="https://github.com/clintar/Boolberry-Blockchain-Explorer">
-                                <i class="fa fa-github"></i> Boolberry Blockchain Explorer</a> |
                             <a target="_blank" href="https://github.com/Karbovanets/Karbowanec-Blockchain-Explorer">
                                 <i class="fa fa-github"></i> Karbowanec Blockchain Explorer</a>
                             <br />
@@ -460,7 +458,7 @@
                     <div>Partially based on cryptonote-universal-pool open sourced under the
                         <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a>
                     </div>
-                    <div>&copy; 2017 <strong>BBSCoin</strong>.</div>
+                    <div>&copy; 2024 <strong>dogemone</strong>.</div>
                 </div>
             </div>
         </div>
